# codetracer-trace-format

./: .envrc  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix  justfile
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 05p673j20pmchapp4kzx8b6ixmavnss1-source  187f8m6qkhfbcinxyj3hxp43w6jvmghv-source  1p9an8qpxmp5rs9mhypd0q02v0qbidxf-source  297v4gwdnm6bjg1asxri5wmbfwynfvv0-source  2dq7fygjqxv4k5173kr1b6vimi38jjsb-source  4777digr8lxjlq4jr0ypjbwcv5r174xn-source  5qw898kk7cn065fyfb6cxw9n8c975x27-source  6ssnhji7p0fa227qwgd5z5j8bgi2cwdy-source  6xvwr1yw8lignwabyd394wp9qb8flsrh-source  70wk9pc00h1swm5xcbvwv0clnvd5386v-source  80k688v7ap4pl77rga6zms3l16ddr1qh-source  8c65bk8f4rd50066zymjw4hcbn25bx7h-source  92l4iq403qali5v9gzm8v0ls7k3fa0nv-source  a4ii45k5cif6zldg881vri8d79g9m83g-source  ap24712x73vfqp8d6ww881zf6aipv4jg-source  b5b7b4j90yrwbpw83kjq87m230krdqhd-source  bmpv349gk16551fmv2dmv3iz5higv3yz-source  cbfjpv9fvlmyqya55rqrv1znm5kk3hs5-source  cy6cvjfw0729jx30b2khdbjak8wbbcs1-source  dqvkyk4l066xx01ikzapzzhsl76m478f-source  fk72y5m99vh5r6g2ygq70r0yp3kz8ia2-source  flgw09xqxp8g4zpldyxxr10qb1pajv64-source  g3cls30m62yv8mbrvx9zdi0lnwca3vsi-source  gazgx9d5bsggn5rdj3jaiwbspm8n9hiq-source  hb9h87a94p5k94hbs0skzxg73rrygbaz-source  hqh4dp94r41rk0k4b9b6v804nrlwmij8-source  hs60rjkj4jf56x6ki09f3l3bjb3xmd4r-source  i368d50y041zjpnbkxavay60flrx002a-source  ia9lvw35qdbnvdpzii50fxrfk2n261wa-source  irrzc95wr3yb4dr0whyg6n4hbr0mmq8f-source  j1ivqnsi1rplw3m2053qdmv4y8zk16z6-source  ksl62hl3hamyy7qslgg7ld7m493jbhkk-source  l33fj9ayppmlhc1gzlaz1yag1y8q9ybp-source  m0m72b7nj91pfyfbblzhi7k7c2cxpb6b-source  mw7y86mrn8zz93hig7b8l4i0r79gcqap-source  npm9dap7j0i92l524y09x255zi9447qp-source  p3d32817wxp6a2y32209ywb83qp53zm3-source  pizi564pgz4yrpr2qs4bkqjvlvqblf9x-source  q5nqc9d6ajyf3pr9qppn9xymjb9rkhwl-source  qavm6bsbcccadl3rr88dqbywm5666xr5-source  (+10 more)
.github/: sibling-pins  sibling-pins.json
.github/workflows/: codetracer-integration.yml  rust.yml  windows-tests.yml
codetracer_ctfs/: Cargo.toml
codetracer_ctfs/src/: base40.rs  block_alloc.rs  chunked.rs  concurrent_reader.rs  concurrent_writer.rs  file_entry.rs  filemap.rs  header.rs  lib.rs  mmap_info.rs  platform_info.rs  pread_compat.rs  reader.rs  trace_storage.rs  writer.rs
codetracer_ctfs/tests/: filemap_compat.rs  metadata_compat.rs  trace_storage.rs
codetracer_ctfs/tests/fixtures/trace_storage/: manifest.javascript_materialized.json  manifest.python_materialized.json  manifest.ruby_materialized.json  manifest.sharded_split_ctfs.json  manifest.single_ctfs.json  manifest.split_ctfs.json  storage_config.full.json  storage_config.managed_upload.json
codetracer_trace_filter/: Cargo.toml
codetracer_trace_filter/src/: config.rs  engine.rs  error.rs  ffi.rs  lib.rs  loader.rs  model.rs  selector.rs  summary.rs
codetracer_trace_format_capnp/: Cargo.toml
codetracer_trace_format_capnp/src/: capnptrace.rs  lib.rs  trace.capnp
codetracer_trace_format_cbor_zstd/: Cargo.toml
codetracer_trace_format_cbor_zstd/src/: lib.rs
codetracer_trace_reader/: Cargo.toml
codetracer_trace_reader/src/: call_stream_reader.rs  cbor_zstd_reader.rs  cbor_zstd_reader_wasm.rs  ctfs_reader.rs  global_position_decoder.rs  interning_tables_reader.rs  io_event_stream_reader.rs  lib.rs  seekable_reader.rs  step_stream_reader.rs  streaming_ctfs_reader.rs  trace_readers.rs  value_stream_reader.rs
codetracer_trace_reader/tests/: call_stream_tests.rs  column_decode.rs  ctfs_tests.rs  default_split_streams_tests.rs  interning_tables_tests.rs  io_event_stream_tests.rs  live_replay_test.rs  m14_roundtrip.rs  nim_io_event_stream_crossread.rs  nim_step_stream_crossread.rs  nim_value_stream_crossread.rs  seekable_tests.rs  step_stream_tests.rs  value_stream_tests.rs
codetracer_trace_types/: Cargo.toml
codetracer_trace_types/src/: base64.rs  lib.rs  types.rs
codetracer_trace_util/: Cargo.toml
codetracer_trace_util/src/: inspect_ctfs_cmd.rs  main.rs
codetracer_trace_util/tests/: binary_format.rs
codetracer_trace_util/tests/data/: trace.json
codetracer_trace_writer/: Cargo.toml
codetracer_trace_writer/src/: abstract_trace_writer.rs  call_stream.rs  cbor_zstd_writer.rs  cbor_zstd_writer_wasm.rs  ctfs_writer.rs  event_stream.rs  interning_tables.rs  lib.rs  meta_dat.rs  non_streaming_trace_writer.rs  split_binary.rs  step_stream.rs  streaming_writer.rs  trace_writer.rs  value_stream.rs
codetracer_trace_writer_ffi/: Cargo.toml  build.rs  cbindgen.toml  codetracer_trace_writer.h
codetracer_trace_writer_ffi/src/: lib.rs
codetracer_trace_writer_nim/: Cargo.toml  build.rs
codetracer_trace_writer_nim/src/: lib.rs
codetracer_trace_writer_nim/tests/: column_decode_cross_reader.rs  register_step_with_column_roundtrip.rs  thread_events.rs
ct-mapping-tools/: Cargo.toml
ct-mapping-tools/src/: lib.rs  main.rs
ct-mapping-tools/tests/: catalog.rs  from_sourcemap.rs  infer.rs  infer_llm.rs
docs/: py-design-001.md  trace_binary_spec.md  trace_json_spec.md
mapping-catalog/: Cargo.toml
mapping-catalog/src/: lib.rs
origin_pattern_discovery/: Cargo.toml
origin_pattern_discovery/src/: lib.rs
origin_pattern_discovery/tests/: discovery_integration.rs
origin_patterns/: Cargo.toml
origin_patterns/src/: lib.rs
runtime_tracing/: Cargo.toml  build.rs
runtime_tracing/src/: abstract_trace_writer.rs  capnptrace.rs  cbor_zstd_reader.rs  cbor_zstd_writer.rs  cbor_zstd_writer_wasm.rs  cborzstdreader.rs  cborzstdwriter.rs  lib.rs  non_streaming_trace_writer.rs  trace.capnp  trace_readers.rs  trace_writer.rs  tracer.rs  types.rs
runtime_tracing/tests/: binary_format.rs
runtime_tracing/tests/data/: trace.json
runtime_tracing_cli/: Cargo.toml
runtime_tracing_cli/src/: fmt_trace_cmd.rs  main.rs
sourcemap-translate/: Cargo.toml
sourcemap-translate/src/: lib.rs
src/: lib.rs  tracer.rs  types.rs
trace_formatter/: Cargo.toml
trace_formatter/src/: lib.rs  prettify.rs  read_write_json.rs
