[workspace]
resolver = "2"
members = [
    "codetracer_trace_types",
    "codetracer_trace_format_capnp",
    "codetracer_trace_format_cbor_zstd",
    "codetracer_trace_reader",
    "codetracer_trace_writer",
    "codetracer_trace_util",
    "trace_formatter",
]

[workspace.dependencies]
trace_formatter = { path = "trace_formatter/"}
codetracer_trace_types = { path = "codetracer_trace_types" }
codetracer_trace_format_capnp = { path = "codetracer_trace_format_capnp" }
codetracer_trace_format_cbor_zstd = { path = "codetracer_trace_format_cbor_zstd" }
codetracer_trace_reader = { path = "codetracer_trace_reader" }
codetracer_trace_writer = { path = "codetracer_trace_writer" }
