[workspace]
resolver = "2"
members = [
    "codetracer_trace_types",
    "codetracer_trace_format_capnp",
    "codetracer_trace_format_cbor_zstd",
    "codetracer_trace_reader",
    "codetracer_trace_writer",
    "codetracer_trace_writer_ffi",
    "codetracer_trace_writer_nim",
    "codetracer_trace_util",
    "trace_formatter", "codetracer_ctfs",
    "codetracer_trace_filter",
    "origin_patterns",
    "origin_pattern_discovery",
    "sourcemap-translate",
    "ct-mapping-tools",
    "mapping-catalog",
]

[workspace.dependencies]
trace_formatter = { path = "trace_formatter/"}
codetracer_trace_types = { version = "0.19.0", path = "codetracer_trace_types" }
codetracer_trace_format_capnp = { version = "0.19.0", path = "codetracer_trace_format_capnp" }
codetracer_trace_format_cbor_zstd = { version = "0.19.0", path = "codetracer_trace_format_cbor_zstd" }
codetracer_trace_reader = { version = "0.19.0", path = "codetracer_trace_reader" }
codetracer_trace_writer = { version = "0.19.0", path = "codetracer_trace_writer" }
