[package]
name = "codetracer_ctfs"
version = "0.1.0"
edition = "2021"
description = "CodeTracer File System (CTFS) binary container format"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ureq = { version = "2.12", features = ["json"] }
urlencoding = "2.1"
zstd = "0.13"

[[bin]]
name = "codetracer-managed-upload"
path = "src/bin/codetracer-managed-upload.rs"

[dev-dependencies]
tempfile = "3"
