[package]
name = "codetracer_ctfs"
version = "0.1.0"
edition = "2021"
description = "CodeTracer File System (CTFS) binary container format"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
urlencoding = "2.1"
zstd = "0.13"

# `ureq` is only needed by `trace_storage` for HTTP uploads, which is
# disabled on `wasm32-unknown-unknown` (see `src/lib.rs`).  Restricting
# the dep to non-wasm targets keeps the entire rustls/ring TLS stack
# out of the WASM build graph.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = { version = "2.12", features = ["json"] }

[[bin]]
name = "codetracer-managed-upload"
path = "src/bin/codetracer-managed-upload.rs"

[dev-dependencies]
tempfile = "3"
