[package]
name = "codetracer_trace_filter"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Cross-language trace-filter engine (selectors, TOML schema, classifier) shared by CodeTracer recorders"
repository = "https://github.com/metacraft-labs/codetracer-trace-format"

[lib]
name = "codetracer_trace_filter"
# Build a `cdylib` in addition to the rlib so external (non-Rust) recorders
# can dynamically link the FFI surface in `::ffi`.  The `staticlib` form is
# useful for static-link builds where a recorder embeds the crate directly.
crate-type = ["rlib", "cdylib", "staticlib"]

[features]
default = []
# Enable the C FFI symbols (`ctf_*`).  On by default for the cdylib/staticlib
# targets; rlib consumers (e.g. the Python recorder, which uses the Rust API)
# can opt out to shrink the public surface.
ffi = []

[dependencies]
dashmap = "5.5"
globset = "0.4"
log = { version = "0.4", features = ["kv"] }
once_cell = "1.19"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
thiserror = "1.0"
toml = "0.8"

[dev-dependencies]
tempfile = "3.10"
