[package]
name = "codetracer_trace_format_capnp"
version = "0.16.0"
edition = "2024"
authors = ["Metacraft Labs Ltd"]
description = "A library containing some helpers, used internally in the reading and writing of the CodeTracer db trace format"
repository = "https://github.com/metacraft-labs/runtime_tracing"
license = "MIT"
keywords = ["debugging", "development-tools"]

[dependencies]
codetracer_trace_types.workspace = true
capnp = "0.21.1"

[build-dependencies]
capnpc = "0.21.0"
