[package]
name = "codetracer_trace_format_cbor_zstd"
version = "0.16.0"
edition = "2024"
authors = ["Metacraft Labs Ltd"]
description = "A library containing some helpers, used internally in the reading and writing of the CodeTracer db trace format"
repository = "https://github.com/metacraft-labs/runtime_tracing"
license = "MIT"
keywords = ["debugging", "development-tools"]
