[package]
name = "codetracer_trace_reader"
version = "0.17.0"
edition = "2024"
authors = ["Metacraft Labs Ltd"]
description = "A library for reading the CodeTracer db trace format"
repository = "https://github.com/metacraft-labs/runtime_tracing"
license = "MIT"
keywords = ["debugging", "development-tools"]

[dependencies]
codetracer_trace_types.workspace = true
codetracer_trace_format_capnp.workspace = true
codetracer_trace_format_cbor_zstd.workspace = true
fscommon = "0.1.1"
serde_json = "1.0"
cbor4ii = { version = "1.0.0", features = ["serde1", "use_std"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
zeekstd = "0.6.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
ruzstd = "0.8.1"
