[package]
name = "codetracer_trace_types"
version = "0.16.1"
edition = "2024"
authors = ["Metacraft Labs Ltd"]
description = "A library for the schema for the CodeTracer db trace format"
repository = "https://github.com/metacraft-labs/runtime_tracing"
license = "MIT"
keywords = ["debugging", "development-tools"]

[dependencies]
base64 = "0.22.1"
num-traits = "0.2"
num-derive = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
schemars = "0.8.2"
