[package]
name = "codetracer_trace_types"
version = "0.17.0"
edition = "2024"
authors = ["Metacraft Labs Ltd"]
description = "A library for the schema for the CodeTracer db trace format"
repository = "https://github.com/metacraft-labs/runtime_tracing"
license = "MIT"
keywords = ["debugging", "development-tools"]

[dependencies]
base64 = "0.22.1"
num-traits = "0.2"
num-derive = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
schemars = "0.8.2"
serde_with = "3.15.1"
# M-REC-1: UUIDv7 generation for recording_id (RFC 9562, §5.7).  The
# `v7` feature pulls in `getrandom` for CSPRNG entropy.
uuid = { version = "1.10", features = ["v7", "serde"] }
