[package]
name = "codetracer_trace_util"
version = "0.3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
codetracer_trace_reader.workspace = true
codetracer_trace_writer.workspace = true
trace_formatter.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
