[package]
name = "codetracer_trace_writer"
version = "0.16.0"
edition = "2024"

[dependencies]
codetracer_trace_types.workspace = true
codetracer_trace_format_capnp.workspace = true
codetracer_trace_format_cbor_zstd.workspace = true
serde_json = "1.0"
cbor4ii = { version = "1.0.0", features = ["serde1", "use_std"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
zeekstd = "0.6.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
ruzstd = "0.8.1"
