[package]
name = "codetracer_trace_writer_nim"
version = "0.1.0"
edition = "2021"
description = "TraceWriter implementation backed by the Nim codetracer-trace-format-nim library"

[dependencies]
codetracer_trace_types = { path = "../codetracer_trace_types" }
# The Nim static library from codetracer-trace-format-nim calls libzstd.
# Depending on `zstd-sys` directly (a) links a libzstd built from source
# with the active toolchain (MSVC on Windows, so it links cleanly -- unlike
# the MinGW `libzstd_static.lib` in the prebuilt zstd release) and (b)
# exposes `DEP_ZSTD_ROOT` to this crate's build.rs, which is where the
# matching `zstd.h` lives (build.rs needs it to compile the Nim bindings).
# default-features = false drops zstd-sys's `bindgen` feature: we never use
# its Rust bindings (only the linked libzstd + the exported `zstd.h`), and
# `bindgen` would otherwise require libclang on every consumer's machine.
zstd-sys = { version = "2", default-features = false, features = ["std"] }
# Used by the in-memory `NonStreamingTraceWriter` test double to decode the
# streaming-encoder CBOR payloads (`register_variable_cbor` / `register_return_cbor`)
# back into typed `ValueRecord`s so buffered events are faithfully inspectable.
ciborium = "0.2"
# `NonStreamingTraceWriter` serialises buffered events to disk as JSON for the
# `Json` trace format (faithful drop-in for the legacy Rust writer crate).
serde_json = "1.0"

[build-dependencies]
# None needed -- build.rs compiles the Nim static library via `nim`.

[dev-dependencies]
tempfile = "3"
