[package]
name = "runtime_tracing"
version = "0.16.0"
edition = "2024"
authors = ["Metacraft Labs Ltd"]
description = "A library for the schema and tracing helpers for the CodeTracer db trace format"
readme = "README.md"
repository = "https://github.com/metacraft-labs/runtime_tracing"
license = "MIT"
keywords = ["debugging", "development-tools"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
num-traits = "0.2"
num-derive = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
schemars = "0.8.2"
capnp = { version = "0.21.1", optional = true }
cbor4ii = { version = "1.0.0", features = ["serde1", "use_std"], optional = true }
fscommon = { version = "0.1.1", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
zeekstd = { version = "0.6.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
ruzstd = { version = "0.8.1", optional = true }

[build-dependencies]
capnpc = { version = "0.21.0", optional = true }

[lib]
name = "runtime_tracing"
path = "src/lib.rs"

[features]
writers_and_readers = ["dep:capnp", "dep:cbor4ii", "dep:fscommon", "dep:zeekstd", "dep:ruzstd", "dep:capnpc"]
# to disable the default features, a dependency must use: `default-features = false ` !
#   https://doc.rust-lang.org/cargo/reference/features.html
default = ["writers_and_readers"]
