[package]
name = "runtime_tracing"
version = "0.15.0"
edition = "2024"
authors = ["Metacraft Labs Ltd"]
description = "A library for the schema and tracing helpers for the CodeTracer db trace format"
readme = "README.md"
repository = "https://github.com/metacraft-labs/runtime_tracing"
license = "MIT"
keywords = ["debugging", "development-tools"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codetracer_trace_types.workspace = true
serde_json = "1.0"
capnp = "0.21.1"
cbor4ii = { version = "1.0.0", features = ["serde1", "use_std"] }
fscommon = "0.1.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
zeekstd = "0.6.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
ruzstd = "0.8.1"

[build-dependencies]
capnpc = "0.21.0"

[lib]
name = "runtime_tracing"
path = "src/lib.rs"
