[package]
name = "runtime_tracing_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
runtime_tracing.workspace = true
trace_formatter.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
